tests/bad/typing/033-if-alone.clap
val x = if True then "foo"
